# efio

./: .gitignore  CMakeLists.txt  LIC  LICENSE  README  README.md  asan.CMakeLists.txt  cmake.env
.github/workflows/: cmake.yml
cmake/: DefinePlatformSpecifc.cmake  PocoMacros.cmake  PocoMacros.cmake.safe  ef_ioConfig.cmake.in  ef_ioConfig.cmake.in.safe  efioConfig.cmake.in  evioConfig.cmake.in
core_utils/: CMakeLists.txt  base64.c  base64.h  core.c  ev_compression.c  ev_compression.h  evioConfig.cmake  float_limits.c  hex.c  makefile  trigraph.c
core_utils/cmake/: core_utilsConfig.cmake
core_utils/testsuite/: tester.c
cutest/: CMakeLists.txt  CuTest.h
cutest/cmake/: cutestConfig.cmake
evds/: CMakeLists.txt  Makefile  chunked_memory_stream.cpp  chunked_memory_stream.h  comp  ev_buffered_stream.cpp  ev_buffered_stream.h  ev_mpiqueue.c  ev_paqueue.c  ev_paqueue.h  ev_piqueue.c  ev_piqueue.h  ev_pqueue.c  ev_pqueue.h  ev_queue.c  ev_queue.h  ev_queue_alloc.c  ev_queue_alloc.h  ev_spiqueue.c  ev_stack.c  ev_stack.h  memory_buffer_list.cpp  memory_buffer_list.h
evds/cmake/: evdsConfig.cmake
evds/testsuite/: CMakeLists.txt  test_ev_buffered_stream.cpp  test_ev_chunked_stream.cpp  test_ev_memory_buffer.cpp  test_ev_mpiqueue.c  test_ev_paqueue.c  test_ev_piqueue.c  test_ev_pqueue.c  test_ev_queue.c  test_ev_spiqueue.c  test_ev_stack.c
evglobals/: CMakeLists.txt  Makefile  ev.h  ev_globals.c  ev_globals.h  ev_include.h
evglobals/cmake/: evglobalsConfig.cmake
evglobals/testsuite/: CMakeLists.txt  test_ev_globals.c  test_ev_globals_fail.c
evio/: CMakeLists.txt  Makefile  ef_file.c  ef_internals.h  ef_io.h
evio/testsuite/: CMakeLists.txt  file_test_case_1.c  file_test_case_2.c  file_test_case_3.c  file_test_case_4.c  file_test_case_5.c  reading_file_sample2
evsync/: CMakeLists.txt  Makefile  ev_mcs_lock.c  ev_mcs_lock.h  ev_rwlock.c  ev_rwlock.h  ev_rwlock_struct.h  ev_spin_lock.c  ev_spin_lock.h
evsync/cmake/: evsyncConfig.cmake
evthrpool/: CMakeLists.txt  Makefile  thread_pool.c  thread_pool.h
evthrpool/cmake/: evthrpoolConfig.cmake
evthrpool/testsuite/: CMakeLists.txt  test_thread_pool.c
notes/: memory_barriers.txt
try/ev_io/: 1test_ef_file.c  2test_ef_file.c  cha.c  e.c  file.c  test_ef_file.c
try/evthrpool/: multi_thread_pool.c  paq_thread_pool.c  pq_thread_pool.c
